--- a/Arquivos/b8/index.html
+++ b/Arquivos/b8/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estrela Rotativa</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div>
-        <div class="estrela"></div>
+    <main>
+        <div id="gira">
+            <div id="triangle">
+        </div>
 
-    </div>
+        </div>
+    </main>
 </body>
 </html>
